fix: fix footer shift problem in shoppingCart page

--- a/src/components/ShoppingCartItems/shoppingCartItems.module.css
+++ b/src/components/ShoppingCartItems/shoppingCartItems.module.css
@@ -54,7 +54,11 @@
 }
 
 .ctaWrapper {
-  width: 100%;
+  /* make layout shift left 15px, headless ui will add padding-right 15px when scrollbar visible */
+  padding-right: 15px; 
+
+  /* 100vw to ignore scrollbar, combine with padding-right make position look correct */
+  width: 100vw; 
   height: var(--footer-height); /* inherit from .container */
   background: white;
   position: fixed;
